# dodrio-realworld-starter-kit

./: .gitignore  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  THOUGHTS.md  index.html  readme.md
src/: home.rs  layout.rs  lib.rs  login.rs  profile.rs  router.rs  util.rs
wasm-history/: Cargo.toml
wasm-history/src/: lib.rs
wasm-history/tests/: web.rs
