[package]
name = "wasm-history"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.40"
url = "1.7.2"

[dependencies.web-sys]
version = "0.3.17"
features = [
    "Window",
    "Location",
    "History",
    "Event",
    "EventTarget",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.40"
